# parsesql

./: .gitignore  README.md  setup.py
R/: .Rbuildignore  DESCRIPTION  NAMESPACE
R/R/: classes.R  parsesql.R  sqlparse.R
R/data/: special.rda
R/data-raw/: special.R
R/man/: parsesql.Rd  special.Rd  sql_parser.Rd  sqlparse.Rd
R/sqlparse/: DESCRIPTION  NAMESPACE
R/sqlparse/R/: classes.R  data.R
R/sqlparse/data/: special.rda  standards.rda
R/sqlparse/data-raw/: special.R
R/sqlparse/man/: standards.Rd
python/: setup.cfg
python/parsesql/: classes.py
python/parsesql/docs/: conf.py  index.rst
python/src/: classes.py  vars.py
python/tests/: test_classes.py
source/: conf.py  index.rst
