[metadata]
name = parsesql
version = 0.1
author = Wade Lieurance
author_email = wlieurance@gmail.com
description = A simple class based SQL parser that separates text SQL statements into vectors, formats them with parameters, determines character states, and creates a color/style formatted output for printing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wlieurance/parsesql/python
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Text Processing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src